--- a/app_chat/pubspec.yaml
+++ b/app_chat/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   image_picker: ^0.8.5+3
   freezed: ^2.0.5
   flutter_bloc: ^8.0.1
-  get: ^4.6.5
+  get_it: ^7.2.0
   intl: ^0.17.0
   html: ^0.15.0
   flutter_svg: ^1.1.1+1
@@ -70,8 +70,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images
-    - assets/icons
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
