--- a/app_chat/pubspec.yaml
+++ b/app_chat/pubspec.yaml
@@ -45,7 +45,11 @@ dependencies:
   intl: ^0.17.0
   html: ^0.15.0
   flutter_svg: ^1.1.1+1
-
+  google_sign_in: ^5.4.0
+  equatable: ^2.0.3
+  flutter_riverpod: ^1.0.4
+  shared_preferences: ^2.0.13
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
