--- a/app_chat/pubspec.yaml
+++ b/app_chat/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   cloud_firestore: ^3.2.1
   firebase_storage: ^10.3.1
   image_picker: ^0.8.5+3
-  freezed: ^2.0.5
   flutter_bloc: ^8.0.1
   get_it: ^7.2.0
   intl: ^0.17.0
@@ -49,7 +48,10 @@ dependencies:
   equatable: ^2.0.3
   flutter_riverpod: ^1.0.4
   shared_preferences: ^2.0.13
-  
+  freezed: ^2.1.0+1
+  freezed_annotation: ^2.1.0
+  json_annotation: ^4.6.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,6 +62,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
